tests/negative/throw_uncaught.rkl
; A kind the language does not define still reports by name when uncaught.
(throw MY_ERROR)
